beginnings of an up command
